--- a/package.yaml
+++ b/package.yaml
@@ -1,7 +1,7 @@
 name:                adn
 version:             0.1.0.0
 github:              "loltarudesh/adn-warp"
-license:             MIT
+license:             BSD-3
 author:              "Lorbam Oltarudesh"
 maintainer:          "lorbamOltarudesh@protonmail.com"
 copyright:           "2021 Lorbam Oltarudesh"
