--- a/package.yaml
+++ b/package.yaml
@@ -21,35 +21,35 @@ description:         Please see the README on GitHub at <https://github.com/lolt
 dependencies:
 - base >= 4.7 && < 5
 - array 
-- containers == 0.6.5.1 
-- bytestring == 0.10.12.0
-- binary == 0.8.8.0
-- lens == 4.19.2
-- mtl == 2.2.2
-- network == 3.1.1.1        
-- split == 0.2.3.4       
-- utf8-string == 1.0.2
+- containers >= 0.6.4 && < 0.6.6
+- bytestring == 0.10.12.*
+- binary == 0.8.8.*
+- lens >= 4.19 && < 5.1
+- mtl == 2.2.*
+- network >= 3.1.1 && < 3.1.3
+- split == 0.2.3.*
+- utf8-string == 1.0.*
 - exceptions == 0.10.4
-- time == 1.9.3
-- parsec == 3.1.14.0
+- time == 1.9.3.*
+- parsec == 3.1.14.*
 
 # for timers 
-- timers == 0.2.0.4
-- suspend == 0.2.0.0
+- timers == 0.2.0.*
+- suspend == 0.2.0.*
 
 # for ADN.CLI
-- haskeline == 0.8.2
+- haskeline == 0.8.2.*
 
 # not all realy used: ADN.Core.Pipe.Chan 
-- stm == 2.5.0.1   
-- unagi-chan == 0.4.1.4
+- stm == 2.5.0.*   
+- unagi-chan == 0.4.1.*
 
 # for ADN.Tun
-- unix == 2.7.2.2 # manage system handler
-- process == 1.6.13.2 # call shell commands
+- unix == 2.7.2.* # manage system handler
+- process == 1.6.13.* # call shell commands
 
 # for argument parsing
-- optparse-applicative == 0.16.1.0
+- optparse-applicative == 0.16.1.*
 
 library:
   source-dirs: src
@@ -62,6 +62,14 @@ executables:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
+    - -Wall
+    - -Wcompat
+    - -Widentities
+    - -Wincomplete-record-updates
+    - -Wincomplete-uni-patterns
+    - -Wpartial-fields
+    - -Wredundant-constraints
+    - -Werror
     dependencies:
     - adn
 
